Fixed blurring effect

--- a/styling/css/registerStyle.css
+++ b/styling/css/registerStyle.css
@@ -21,8 +21,6 @@ body{
 	border-radius : 5px;
 	padding : 40px;
 	
-	-webkit-filter : blur(5px);
-	filter : blur(5px);
 	
 }
 
